--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,7 @@ body {
   font-size: 18px;
 }
 
-/*body {
-  text-align: center;
-  font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
+/*
 
 .my_social {
   position: absolute;
