--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,11 @@ body {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-
-.wrappper {
+/*.wrappper {
   width: 100%;
   margin: 0 auto;
 }
