--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,12 @@ body {
   height: 1.5em;
 }
 
-/*.wrappper {
+.wrappper {
   width: 100%;
   margin: 0 auto;
 }
-.wrappper:after {
+
+/*.wrappper:after {
   content: "";
   display: table;
   clear: both;
