--- a/css/styles.css
+++ b/css/styles.css
@@ -29,13 +29,13 @@ body {
   margin: 0 auto;
 }
 
-/*.wrappper:after {
+.wrappper:after {
   content: "";
   display: table;
   clear: both;
 }
 
-canvas {
+/*canvas {
   color: #fff;
   border: #fff dashed 2px;
   padding: 15px;
