--- a/css/styles.css
+++ b/css/styles.css
@@ -35,13 +35,13 @@ body {
   clear: both;
 }
 
-/*canvas {
+canvas {
   color: #fff;
   border: #fff dashed 2px;
   padding: 15px;
 }
 
-h1, h2, h3 {
+/*h1, h2, h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   text-transform: uppercase;
