--- a/css/styles.css
+++ b/css/styles.css
@@ -41,14 +41,14 @@ canvas {
   padding: 15px;
 }
 
-/*h1, h2, h3 {
+h1, h2, h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   text-transform: uppercase;
   margin: 5px 0;
 }
 
-h1 {
+/*h1 {
   font-size: 2.6em;
 }
 
