--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,11 @@ h2 {
   font-size: 1.6em;
 }
 
-/*p {
+p {
   font-size: 1.6em;
 }
 
-#alphabet {
+/*#alphabet {
   margin: 15px auto;
   padding: 0;
   max-width: 900px;
