--- a/css/styles.css
+++ b/css/styles.css
@@ -66,13 +66,13 @@ p {
   max-width: 900px;
 }
 
-/*#alphabet:after {
+#alphabet:after {
   content: "";
   display: table;
   clear: both;
 }
 
-#alphabet li {
+/*#alphabet li {
   float: left;
   margin: 0 10px 10px 0;
   list-style: none;
