--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ p {
   clear: both;
 }
 
-/*#alphabet li {
+#alphabet li {
   float: left;
   margin: 0 10px 10px 0;
   list-style: none;
@@ -88,7 +88,8 @@ p {
   -khtml-border-radius: 5px;
   border: solid 1px #fff;
 }
-#alphabet li:hover {
+
+/*#alphabet li:hover {
   background: #c1d72e;
   border: solid 1px #fff;
   color: #fff;
