--- a/css/styles.css
+++ b/css/styles.css
@@ -89,13 +89,13 @@ p {
   border: solid 1px #fff;
 }
 
-/*#alphabet li:hover {
+#alphabet li:hover {
   background: #c1d72e;
   border: solid 1px #fff;
   color: #fff;
 }
 
-#my-word {
+/*#my-word {
   margin: 0;
   display: block;
   padding: 0;
