--- a/css/styles.css
+++ b/css/styles.css
@@ -95,14 +95,14 @@ p {
   color: #fff;
 }
 
-/*#my-word {
+#my-word {
   margin: 0;
   display: block;
   padding: 0;
   display: block;
 }
 
-#my-word li {
+/*#my-word li {
   position: relative;
   list-style: none;
   margin: 0;
