--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ p {
   display: block;
 }
 
-/*#my-word li {
+#my-word li {
   position: relative;
   list-style: none;
   margin: 0;
@@ -111,7 +111,7 @@ p {
   font-size: 1.6em;
 }
 
-.active {
+/*.active {
   opacity: 0.4;
   filter: alpha(opacity=40);
   -moz-transition: all 1s ease-in;
