--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ p {
   font-size: 1.6em;
 }
 
-/*.active {
+.active {
   opacity: 0.4;
   filter: alpha(opacity=40);
   -moz-transition: all 1s ease-in;
@@ -119,7 +119,8 @@ p {
   -webkit-transition: all 0.3s ease-in-out;
   cursor: default;
 }
-.active:hover {
+
+/*.active:hover {
   -moz-transition: all 1s ease-in;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
