--- a/css/styles.css
+++ b/css/styles.css
@@ -131,13 +131,13 @@ p {
   -webkit-transition: all 0.3s ease-in-out;
 }
 
-/*#mylives {
+#mylives {
   font-size: 1.6em;
   text-align: center;
   display: block;
 }
 
-button {
+/*button {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
