--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ button {
   outline: none;
 }
 
-/*button:hover {
+button:hover {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -163,7 +163,7 @@ button {
   color: #c1d72e;
 }
 
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
   #alphabet {
     padding: 0 0 0 15px;
   }
