--- a/css/styles.css
+++ b/css/styles.css
@@ -169,13 +169,13 @@ button:hover {
   }
 }
 
-/*@media (max-width: 480px) {
+@media (max-width: 480px) {
   #alphabet {
     padding: 0 0 0 25px;
   }
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
