--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ button:hover {
   margin: 20px auto;
 }
 
-/*#contact h1 {
+#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
@@ -192,7 +192,7 @@ button:hover {
   border-bottom: 3px solid #f3f3f3;
 }
 
-.cal {
+/*.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
